UI improvements - GridView and Listview options in AllPayments Screen

--- a/paystatsappui/src/app/component/payment-list/payment-list.component.css
+++ b/paystatsappui/src/app/component/payment-list/payment-list.component.css
@@ -7,3 +7,8 @@
     width: 28px !important;
     height: 28px !important;
 }
+
+.img-icon-small{
+    width: 19px !important;
+    height: 19px !important;
+}
