--- a/paystatsappui/src/app/component/payment-list/payment-list.component.html
+++ b/paystatsappui/src/app/component/payment-list/payment-list.component.html
@@ -1,35 +1,47 @@
 <div class="container">
-  <div class="mb-4 mt-4 border-bottom border-dark heading-border row clearfix">
+  <div class="mb-4 mt-4 border-bottom border-dark heading-border  clearfix">
     <h4 class="float-left">All Payments </h4>
     <div class="float-right">
-      <img [src]="gridViewLogo" class="img-icon mr-2 img-thumbnail" />
-      <img [src]="listViewLogo" class="img-icon img-thumbnail" />
+      <img [src]="gridViewLogo" class="img-icon mr-2 img-thumbnail" (click)="changeView('grid')"  
+        data-toggle="tooltip" data-placement="bottom" title="Show as Grid" />
+      <img [src]="listViewLogo" class="img-icon img-thumbnail" (click)="changeView('list')"
+        data-toggle="tooltip" data-placement="bottom" title="Show as List" />
     </div>
   </div>
-  <div class="card-columns mb-4">
-    <div class="card p-3" *ngFor="let p of payments; index as i" (mouseover)="cf.hidden=false; nomouse.hidden=true; mouse.hidden=false"
-      (mouseleave)="cf.hidden=true; nomouse.hidden=false; mouse.hidden=true">
-
+  <div class="card-columns mb-4" *ngIf="isGridView">
+    <div class="card p-3" *ngFor="let p of payments; index as i"
+      (mouseover)="cf.hidden=false; nomouse.hidden=true; mouse.hidden=false"
+      (mouseleave)="cf.hidden=true; nomouse.hidden=false; mouse.hidden=true"
+      >
+<!-- [ngClass]="{
+        'border-primary': p.paymentCategory=='Transport',
+        'border-secondary': (p.paymentCategory=='Flat Amenities' || p.paymentCategory=='Stationary'),
+        'border-success': p.paymentCategory=='Food',
+        'border-danger': (p.paymentCategory=='Self' || p.paymentCategory=='Family' || p.paymentCategory=='Friends' || p.paymentCategory=='Clothes'),
+        'border-warning': (p.paymentCategory=='Entertainment' || p.paymentCategory=='Online Services'),
+        'border-info': p.paymentCategory=='Grocery',
+        'border-dark': p.paymentCategory=='Food'
+      }"  -->
       <div class="clearfix">
         <h6 class="card-title float-left">
-          <div #nomouse>{{p.title | adjustLength:40}}</div>
-          <div #mouse hidden="true">{{p.title | adjustLength:30}}</div>
+          <div class="font-weight-bold" #nomouse>{{p.title | adjustLength:40}}</div>
+          <div class="font-weight-bold" #mouse hidden="true">{{p.title | adjustLength:30}}</div>
         </h6>
         <div class="float-right">
           <div hidden="true" #cf>
 
             <a (click)="viewDetails(detailsModal, p, i)">
-              <img [src]="detailLogo" class="img-thumbnail img-icon" data-toggle="tooltip" data-placement="bottom"
+              <img [src]="detailLogo" class="img-icon-small" data-toggle="tooltip" data-placement="bottom"
                 title="View Payment Details" />
             </a>
 
             <a routerLink="/editPayment/{{p.payid}}">
-              <img [src]="editLogo" class="img-thumbnail ml-2 img-icon" data-toggle="tooltip" data-placement="bottom"
+              <img [src]="editLogo" class="ml-3 img-icon-small" data-toggle="tooltip" data-placement="bottom"
                 title="Edit this Payment" />
             </a>
 
             <a (click)="deleteModal(modal, p, i)">
-              <img [src]="garbageLogo" class="img-thumbnail ml-2 img-icon" data-toggle="tooltip" data-placement="bottom"
+              <img [src]="garbageLogo" class="ml-3 img-icon-small" data-toggle="tooltip" data-placement="bottom"
                 title="Delete this Payment" />
             </a>
 
@@ -46,7 +58,52 @@
       </div>
     </div>
   </div>
+  <div class="mb-4" *ngIf="!isGridView">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let p of payments; index as i"
+        (mouseover)="cf.hidden=false; nomouse.hidden=true; mouse.hidden=false"
+        (mouseleave)="cf.hidden=true; nomouse.hidden=false; mouse.hidden=true">
+        
+        <span class="font-weight-bold mr-2">{{p.title | adjustLength:50}}</span>
+        <span class="mr-2 ml-2">|</span>
+        <span class="mr-2 ml-2">{{p.description | adjustLength:50}}</span>
+        <span class="mr-2 ml-2">|</span>
+        <span class="mr-2 ml-2">Paid <span class="font-weight-bold">{{p.amount | currency: 'INR' :'symbol': '1.0-1'}}</span>
+           on {{p.dateOfTransaction | date}} by {{p.payType}}</span>
+        <!-- <span class="mr-2 ml-2">|</span>
+        <span class="mr-2 ml-2">Paid on: {{p.dateOfTransaction | date}}</span> -->
+
+
+
+        <div class="float-right row">
+          <span class="text-muted font-weight-lighter mr-3" style="font-size: 14px;">Edited on {{p.timestamp | date : 'EEE, dd MMM'}}</span>
+          <div hidden="true" #cf>
+
+            <a (click)="viewDetails(detailsModal, p, i)">
+              <img [src]="detailLogo" class="img-icon-small" data-toggle="tooltip" data-placement="bottom"
+                title="View Payment Details" />
+            </a>
+
+            <a routerLink="/editPayment/{{p.payid}}">
+              <img [src]="editLogo" class="ml-3 img-icon-small" data-toggle="tooltip" data-placement="bottom"
+                title="Edit this Payment" />
+            </a>
+
+            <a (click)="deleteModal(modal, p, i)">
+              <img [src]="garbageLogo" class="ml-3 img-icon-small" data-toggle="tooltip" data-placement="bottom"
+                title="Delete this Payment" />
+            </a>
+
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+
 </div>
+
+
 
 <ng-template #modal>
   <div class="modal-header">
@@ -89,8 +146,10 @@
     <p></p>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-info" routerLink="/editPayment/{{paymentSelected.payid}}" (click)="detailsModalRef.hide()">Edit</button>
-    <button class="btn btn-danger" (click)="deleteModal(modal, paymentSelected, indexSelected); detailsModalRef.hide()">Delete</button>
+    <button class="btn btn-info" routerLink="/editPayment/{{paymentSelected.payid}}"
+      (click)="detailsModalRef.hide()">Edit</button>
+    <button class="btn btn-danger"
+      (click)="deleteModal(modal, paymentSelected, indexSelected); detailsModalRef.hide()">Delete</button>
   </div>
 </ng-template>
 
