--- a/paystatsappui/src/app/app.component.html
+++ b/paystatsappui/src/app/app.component.html
@@ -1,20 +1,34 @@
 <nav class="navbar navbar-expand bg-dark navbar-dark sticky-top">
-    <a class="navbar-brand" routerLink="/">
-      Dashboard</a>
-    
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/listPayments/all">
-          All Payments
-        </a> 
-      </li>
-  
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/addPayment">
-          Add Payment
-        </a>
-      </li>
-    </ul>  
-  </nav>
-  
-  <router-outlet></router-outlet>
+  <a class="navbar-brand" routerLink="/">
+    Dashboard</a>
+
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/listPayments/all">
+        All Payments
+      </a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/addPayment">
+        Add Payment
+      </a>
+    </li>
+
+    <li>
+      <div class="btn-group" dropdown>
+        <button id="button-basic" dropdownToggle type="button" class="btn btn-dark dropdown-toggle"
+          aria-controls="dropdown-basic">
+          Manage <span class="caret"></span>
+        </button>
+        <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
+          <li role="menuitem"><a class="dropdown-item" routerLink="/manage/paymentEntities">Payment Entities</a></li>
+          <li role="menuitem"><a class="dropdown-item" routerLink="/manage/paymentCategories">Payment Categories</a></li>
+          <li role="menuitem"><a class="dropdown-item" routerLink="/manage/paymentModes">Payment Modes</a></li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+</nav>
+
+<router-outlet></router-outlet>
