--- a/paystatsappui/src/app/component/payment-list/payment-list.component.html
+++ b/paystatsappui/src/app/component/payment-list/payment-list.component.html
@@ -6,22 +6,24 @@
       <div class="btn-group" dropdown>
         <button id="button-basic" dropdownToggle type="button" class="btn btn-outline-info dropdown-toggle"
           aria-controls="dropdown-basic">
-          Sort By <span class="caret"></span>
+          Sort By: {{sortingApplied}}<span class="caret"></span>
         </button>
         <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-          <li role="menuitem"><a class="dropdown-item">Date: Most Recent</a></li>
-          <li role="menuitem"><a class="dropdown-item">Date: As Added</a></li>
-          <li role="menuitem"><a class="dropdown-item">Amount: Low to High</a></li>
-          <li role="menuitem"><a class="dropdown-item">Amount: High to Low</a></li>
-          
+          <li role="menuitem"><a (click)="sortArray('mostRecentPaymentFirst')" class="dropdown-item">Most Recent Payment First</a></li>
+          <li role="menuitem"><a (click)="sortArray('oldestPaymentFirst')" class="dropdown-item">Oldest Payment First</a></li>
+          <li role="menuitem"><a (click)="sortArray('paymentAmountLowToHigh')" class="dropdown-item">Payment Amount: Low to High</a></li>
+          <li role="menuitem"><a (click)="sortArray('paymentAmountHighToLow')" class="dropdown-item">Payment Amount: High to Low</a></li>
+          <li role="menuitem"><a (click)="sortArray('recentlyAddedPayment')" class="dropdown-item">Recently Added Payment</a></li>
         </ul>
       </div>
-      <img [src]="gridViewLogo" class="img-icon mr-2 ml-3 img-thumbnail" (click)="changeView('grid')" data-toggle="tooltip"
-        data-placement="bottom" title="Show as Grid" />
+      <img [src]="gridViewLogo" class="img-icon mr-2 ml-3 img-thumbnail" (click)="changeView('grid')"
+        data-toggle="tooltip" data-placement="bottom" title="Show as Grid" />
       <img [src]="listViewLogo" class="img-icon img-thumbnail" (click)="changeView('list')" data-toggle="tooltip"
         data-placement="bottom" title="Show as List" />
     </div>
   </div>
+
+
   <div class="card-columns mb-4" *ngIf="isGridView">
     <div class="card p-3" *ngFor="let p of payments; index as i"
       (mouseover)="cf.hidden=false; nomouse.hidden=true; mouse.hidden=false"
@@ -171,14 +173,14 @@
   <div class="modal-header">
     <h4 class="modal-title pull-left ml-3">Apply Filters</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="filtersModalRef.hide()">
-        <span aria-hidden="true">&times;</span>
-      </button>
-  </div> 
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
   <div class="modal-body ml-3 mr-3">
     <p>Oh, Hello there!</p>
   </div>
   <div class="modal-footer">
-      <button class="btn btn-info" routerLink="/editPayment/{{paymentSelected.payid}}"
+    <button class="btn btn-info" routerLink="/editPayment/{{paymentSelected.payid}}"
       (click)="filtersModalRef.hide()">Reset</button>
     <button class="btn btn-danger"
       (click)="deleteModal(modal, paymentSelected, indexSelected); filtersModalRef.hide()">Apply</button>
