FilterModal in PaymentList UI Partially implemented. Other small UI tunings

--- a/paystatsappui/src/app/app.component.html
+++ b/paystatsappui/src/app/app.component.html
@@ -5,7 +5,7 @@
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
       <a class="nav-link" routerLink="/listPayments/all">
-        All Payments
+        View Payments
       </a>
     </li>
 
