--- a/paystatsappui/src/app/component/manage/payment-entity/payment-entity.component.html
+++ b/paystatsappui/src/app/component/manage/payment-entity/payment-entity.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-2">
     <div class="mb-4 mt-4 border-bottom border-dark heading-border clearfix">
       <h4 class="float-left">Manage Payment Entities </h4>
-      <button (click)="viewAddModal(addEntityModal)" class="btn btn-outline-info float-right">Add New</button>
+      <button (click)="viewAddModal(addEntityModal)" class="btn btn-outline-info float-right mb-2">Add New</button>
     </div>
     <div class="mb-4">
       <ul class="list-group">
