--- a/paystatsappui/src/app/component/add-payment/add-payment.component.html
+++ b/paystatsappui/src/app/component/add-payment/add-payment.component.html
@@ -12,12 +12,14 @@
 
           <div class="form-group col-sm-6">
             <label for="paymentTitleInput"> Payment Title* </label>
-            <input class="form-control" id="paymentTitleInput" name="paymentTitleInput" required [(ngModel)]="payment.title" />
+            <input class="form-control" id="paymentTitleInput" name="paymentTitleInput" required
+              [(ngModel)]="payment.title" />
           </div>
 
           <div class="form-group col-sm-6">
             <label for="paymentBodyInput">Description</label>
-            <input class="form-control" id="paymentBodyInput" name="paymentBodyInput" [(ngModel)]="payment.description" />
+            <input class="form-control" id="paymentBodyInput" name="paymentBodyInput"
+              [(ngModel)]="payment.description" />
           </div>
         </div>
 
@@ -25,7 +27,8 @@
 
           <div class="form-group col-sm-4">
             <label for="amountInput">Amount*</label>
-            <input class="form-control" type="number" id="amountInput" name="amountInput" required [(ngModel)]="payment.amount" />
+            <input class="form-control" type="number" id="amountInput" name="amountInput" required
+              [(ngModel)]="payment.amount" />
           </div>
 
           <div class="form-group col-sm-4">
@@ -35,19 +38,10 @@
 
           <div class="form-group col-sm-4">
             <label for="paymentCategoryInput">Payment Category*</label>
-            <select class="form-control" id="paymentCategoryInput" name="paymentCategoryInput" required [(ngModel)]="payment.paymentCategory">
-              <option value="Food">Food</option>
-              <option value="Transport">Transport</option>
-              <option value="Stationary">Stationary</option>
-              <option value="Flat Amenities">Flat Amenities</option>
-              <option value="Grocery">Grocery</option>
-              <option value="Family">Family</option>
-              <option value="Self">Self</option>
-              <option value="Online Services">Online Services</option>
-              <option value="Entertainment">Entertainment</option>
-              <option value="Clothes">Clothes</option>
-              <option value="Friends">Friends</option>
-              <option value="Other">Other</option>
+            <select class="form-control" id="paymentCategoryInput" name="paymentCategoryInput" required
+              [(ngModel)]="payment.paymentCategory">
+              <option *ngFor="let category of paymentCategories" value="{{category.categoryName}}">
+                {{category.categoryName}}</option>
             </select>
           </div>
         </div>
@@ -62,45 +56,33 @@
 
           <div class="form-group col-sm-4">
             <label for="paymentTypeInput">Payment Type*</label>
-            <select class="form-control" id="paymentTypeInput" name="paymentTypeInput" required [(ngModel)]="payment.payType">
-              <option value="Cash">Cash</option>
-              <option value="Debit Card">Debit Card</option>
-              <option value="Credit Card">Credit Card</option>
-              <option value="UPI">UPI</option>
-              <option value="Online Wallet">Online Wallet</option>
-              <option value="Internet Banking">Internet Banking</option>
+            <select class="form-control" id="paymentTypeInput" name="paymentTypeInput" required
+              [(ngModel)]="payment.payType">
+              <option *ngFor="let mode of paymentModes" value="{{mode.paymodeName}}">
+                  {{mode.paymodeName}}</option>
             </select>
           </div>
 
           <div class="form-group col-sm-4" *ngIf="payment.payType!='Cash'">
             <label for="paymentEntityInput">Payment Entity</label>
-            <select class="form-control" id="paymentEntityInput" name="paymentEntityInput" [(ngModel)]="payment.paymentEntity">
-              <option value="HDFC Bank">HDFC Bank</option>
-              <option value="Google Pay">Google Pay</option>
-              <option value="Paytm">Paytm</option>
-              <option value="PhonePe">PhonePe</option>
-              <option value="Freecharge">Freecharge</option>
-              <option value="Ola Money">Ola Money</option>
-              <option value="Amazon Pay">Amazon Pay</option>
+            <select class="form-control" id="paymentEntityInput" name="paymentEntityInput"
+              [(ngModel)]="payment.paymentEntity">
+              <option *ngFor="let entity of paymentEntities" value="{{entity.entityName}}">
+                  {{entity.entityName}}</option>
             </select>
           </div>
-
-          <!-- <div class="form-group col-sm-4">
-            <label for="cashbackInput">Cashback (if applicable)</label>
-            <input class="form-control" type="number" id="cashbackInput" name="cashbackInput" [(ngModel)]="payment.cashback" />
-          </div> -->
         </div>
-
 
         <p class="col-sm-12 mt-3 font-weight-light text-muted">Fields marked with (*) are required to successfully
           submit a payment record.</p>
 
-
         <br />
         <button type="submit" class="btn btn-primary">Submit</button>
         <button type="button" class="btn btn-danger ml-3" (click)="doCancel()"> Cancel</button>
-        <button type="button" class="btn btn-outline-secondary ml-3" (click)="resetValues()" *ngIf="!isEditing">Reset</button>
-        <button type="button" class="btn btn-outline-secondary ml-3" (click)="setDefaultValues()" *ngIf="isEditing">Set to Default</button>
+        <button type="button" class="btn btn-outline-secondary ml-3" (click)="resetValues()"
+          *ngIf="!isEditing">Reset</button>
+        <button type="button" class="btn btn-outline-secondary ml-3" (click)="setDefaultValues()" *ngIf="isEditing">Set
+          to Default</button>
 
       </form>
     </div>
