Minor improvements - add payment, view payment
Add payment - trans. date bug fix, showing num of results in view payments

--- a/paystatsappui/src/app/component/add-payment/add-payment.component.html
+++ b/paystatsappui/src/app/component/add-payment/add-payment.component.html
@@ -47,11 +47,10 @@
         </div>
 
         <div class="row">
-
           <div class="form-group col-sm-4">
             <label for="dateOfTransaction">Date of Transaction*</label>
-            <input type="date" class="form-control" id="dateOfTransaction" name="dateOfTransaction" required
-              [(ngModel)]="payment.dateOfTransaction">
+              <input type="text" placeholder="Datepicker" [bsValue]="paymentDate" [(ngModel)]="paymentDate" name="dateOfTransaction"
+              [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY' }" class="form-control" bsDatepicker>
           </div>
 
           <div class="form-group col-sm-4">
