--- a/paystatsapp-ui/src/MainContainer.css
+++ b/paystatsapp-ui/src/MainContainer.css
@@ -11,11 +11,13 @@
 .img-icon{
     width: 28px !important;
     height: 28px !important;
+    cursor: pointer;
 }
 
 .img-icon-small{
     width: 19px !important;
     height: 19px !important;
+    cursor: pointer;
 }
 
 .middle-align{
@@ -26,3 +28,9 @@
     font-size: 16px;
     font-weight: normal;
 }
+
+.rounded-button{
+    border-radius: 15px !important;
+}
+
+
